# open-kirara-platform

./: .gitignore  Cargo.toml  README.adoc  build.gradle.kts  docker-compose.yml  settings.gradle.kts
docker/conf/mysql/conf.d/: my.cnf
fe/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.common.ts  webpack.config.ts  webpack.development.ts  webpack.production.ts
fe/src/: app.ts  main.ts
fe/static/: index.html
src/: api.rs  main.rs  model.rs  repo.rs  web.rs
src/main/kotlin/com/open_dokidokivisual/open_kirara_platform/: MainVerticle.kt
src/main/kotlin/com/open_dokidokivisual/platform/: MainVerticle.kt
src/main/kotlin/org/dokidokivisual/platform/: MainVerticle.kt
src/main/kotlin/org/dokidokivisual/platform/controller/: IndexController.kt
src/repo/: model.rs
src/test/kotlin/com/open_dokidokivisual/open_kirara_platform/: TestMainVerticle.kt
src/test/kotlin/com/open_dokidokivisual/platform/: TestMainVerticle.kt
src/test/kotlin/org/dokidokivisual/platform/: TestMainVerticle.kt
src/web/: template.rs
