[package]
name = "open-kirara-platform"
version = "0.1.0"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.3"
yarte = "0.12.1"
